Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11422

QDateTimeEdit::setDate doesn't set the date to the popup

    XMLWordPrintable

Details

    • b0c09896a239197411027e773214a2635744695c

    Description

      The attached test case can be used to reproduce this problem.
      When the calendar pops up, the date jumps to the maximum date because that setDate doesn't pass the value to the popup.

      Attachments

        1. datetimeedit.diff
          0.4 kB
        2. main.cpp
          0.3 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            sanonymous Nokia Qt Support (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes